--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<meta name="color-scheme" content="light only" />
 		<meta name="description" content="&quot;Mera naam—Joker!&quot;" />
+		<meta name="robots" content="noindex">
 		<meta property="og:site_name" content="Raj &quot;Rajoo&quot; Ranbir" />
 		<meta property="og:title" content="Raj &quot;Rajoo&quot; Ranbir" />
 		<meta property="og:type" content="website" />
